--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "dynamodb-docs",
+  "name": "@riddance/dynamodb-docs",
   "type": "module",
-  "private": true,
+  "version": "0.0.1",
   "engines": {
     "node": ">=22"
   },
+  "files": [
+    "*.js",
+    "lib/*.js",
+    "*.d.ts"
+  ],
+  "exports": {
+    ".": "./partitioned.js",
+    "./schema": "./schema.js",
+    "./test/mock": "./mock.js"
+  },
   "scripts": {
-    "start": "riddance-watch"
+    "start": "riddance-watch",
+    "prepack": "riddance-build",
+    "prepublishOnly": "riddance-prepublish",
+    "postpublish": "riddance-sync"
+  },
+  "dependencies": {
+    "@riddance/docs": "0.0.1",
+    "@riddance/fetch": "0.1.2",
+    "@smithy/signature-v4": "5.1.3"
   },
   "devDependencies": {
     "@riddance/env": "0.9.2"
